--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li><a href="#">Contact</a></li>
             </ul>
             <div class="header-btn">
-              <a href="#">Get It Now</a>
+              <a class="btn-1" href="#">Get It Now</a>
             </div>
           </div>
         </div>
